--- a/web-apache-mysql/centos/conf/etc/zabbix/apache.conf
+++ b/web-apache-mysql/centos/conf/etc/zabbix/apache.conf
@@ -1,4 +1,6 @@
-<VirtualHost *:80>
+Listen 8080
+
+<VirtualHost *:8080>
     DocumentRoot /usr/share/zabbix/
     ServerName zabbix
     DirectoryIndex index.php
