--- a/web-apache-mysql/centos/Dockerfile
+++ b/web-apache-mysql/centos/Dockerfile
@@ -85,6 +85,7 @@ RUN set -eux && \
     yum ${YUM_FLAGS_PERSISTENT} clean all && \
     rm -rf /var/cache/yum/ && \
 	chgrp -R 0 /run/httpd && \
+	mkdir -p /run/httpd && \
 	chmod -R a+rwx /run/httpd && \
 	chmod -R a+rwx /var/run/httpd 
 
