--- a/web-apache-mysql/centos/Dockerfile
+++ b/web-apache-mysql/centos/Dockerfile
@@ -88,7 +88,9 @@ RUN set -eux && \
 	mkdir -p /run/httpd && \
 	chmod -R a+rwx /run && \
 	chmod -R a+rwx /run/httpd && \	
-	chmod -R a+rwx /var/run/httpd 
+	chmod -R a+rwx /var/run/httpd &&
+	chmod -R a+rwx /var/lib/php
+	
 
 EXPOSE 8080/TCP 
 
