--- a/server-mysql/centos/Dockerfile
+++ b/server-mysql/centos/Dockerfile
@@ -150,4 +150,4 @@ VOLUME ["/var/lib/zabbix/snmptraps", "/var/lib/zabbix/ssh_keys", "/var/lib/zabbi
       
 COPY ["docker-entrypoint.sh", "/usr/bin/"]
 
-ENTRYPOINT ["/sbin/tini", "--", "/usr/bin/docker-entrypoint.sh"]
+ENTRYPOINT ["/bin/bash", "--", "/usr/bin/docker-entrypoint.sh"]
